<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.games.vishalanand23.bullsandcowsandroid.ScoresActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/grainy"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/scores_layout">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scores_label">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_label"
            style="@style/scores_heading_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scores_digit_layout"
        android:layout_below="@+id/scores_label"
        android:orientation="horizontal">

        <Button
            android:id="@+id/score_button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/digit_2"
            android:textAllCaps="false"
            android:layout_weight="0.2"
            android:background="@drawable/new_game_button_background"
            style="@style/new_game_button" />

        <Button
            android:id="@+id/score_button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/digit_3"
            android:textAllCaps="false"
            android:layout_weight="0.2"
            android:background="@drawable/new_game_button_background"
            style="@style/new_game_button" />

        <Button
            android:id="@+id/score_button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/digit_4"
            android:textAllCaps="false"
            android:layout_weight="0.2"
            android:background="@drawable/new_game_button_background"
            style="@style/new_game_button" />

        <Button
            android:id="@+id/score_button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/digit_5"
            android:textAllCaps="false"
            android:layout_weight="0.2"
            android:background="@drawable/new_game_button_background"
            style="@style/new_game_button" />

        <Button
            android:id="@+id/score_button_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/digit_6"
            android:textAllCaps="false"
            android:layout_weight="0.2"
            android:background="@drawable/new_game_button_background"
            style="@style/new_game_button" />
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/space_between_buttons_and_table"
        android:layout_below="@+id/scores_digit_layout" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1"
        android:id="@+id/scores_display_table"
        android:layout_below="@+id/space_between_buttons_and_table"
        style="@style/scores_table">

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/scores_row">

            <TextView
                android:text="@string/number_of_digits_text"
                android:gravity="center"
                style="@style/scores_result_text_in_scores" />

            <TextView
                android:id="@+id/number_of_digits_value"
                android:gravity="center"
                style="@style/scores_result_text_in_scores" />
        </TableRow>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/scores_row">

            <TextView
                android:text="@string/games_played_text"
                style="@style/scores_result_text_in_scores" />

            <TextView
                android:id="@+id/games_played_value"
                style="@style/scores_result_text_in_scores" />
        </TableRow>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/scores_row">

            <TextView
                android:text="@string/games_won_text"
                style="@style/scores_result_text_in_scores" />

            <TextView
                android:id="@+id/games_won_value"
                style="@style/scores_result_text_in_scores" />
        </TableRow>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/scores_row">

            <TextView
                android:text="@string/fastest_time_text"
                style="@style/scores_result_text_in_scores" />

            <TextView
                android:id="@+id/fastest_time_value"
                style="@style/scores_result_text_in_scores" />
        </TableRow>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/scores_row">

            <TextView
                android:text="@string/scores_text"
                style="@style/scores_result_text_in_scores" />

            <TextView
                android:id="@+id/scores_value"
                style="@style/scores_result_text_in_scores" />
        </TableRow>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="2dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_explanation_in_scores"
            style="@style/scores_explanation_text_view" />

    </TableLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/space_between_score_explanation_and_back_to_play"
        android:layout_below="@+id/scores_display_table" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/play_game_in_scores_layout"
        android:layout_below="@+id/space_between_score_explanation_and_back_to_play"
        android:gravity="center"
        style="@style/submit_button_layout">

        <Button
            android:id="@+id/play_game_in_scores"
            android:text="@string/play_game_text"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="50dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:textSize="22sp"
            android:background="@drawable/submit_button_background"
            android:layout_weight="0.6"
            style="@style/submit_button" />

        <com.facebook.share.widget.ShareButton
            android:id="@+id/fb_score_share_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.4"
            android:textSize="22sp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/submit_button_background"
            style="@style/submit_button" />
    </LinearLayout>
</RelativeLayout>